# memora

./: .gitignore  README.md  main.py  pyproject.toml  status.md
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  styles.css
frontend/src/__tests__/: app.test.tsx
memora/: __init__.py  app.py  config.py  db.py  evaluation.py  extraction.py  models.py  schemas.py  security.py  structuring.py
tests/: conftest.py  test_auth_and_notes.py  test_learning_loop.py  test_preview_mode.py  test_recall_evaluation.py  test_structuring.py
